--- a/clusters/local/demo/kbot-gr.yaml
+++ b/clusters/local/demo/kbot-gr.yaml
@@ -1,14 +1,10 @@
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
 metadata:
   name: kbot
   namespace: demo
 spec:
-  chart:
-    spec:
-      chart: ./helm
-      reconcileStrategy: ChartVersion
-      sourceRef:
-        kind: GitRepository
-        name: kbot
   interval: 1m0s
+  ref:
+    branch: main
+  url: https://github.com/tooggi/kbot
